<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="co.swrl.list.ui.activity.ListActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/navigation"
                    android:layout_alignParentStart="true"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/noSwrlsText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/navigation"
                    android:gravity="center"
                    android:text="@string/exampleNoSwrlsText" />

                <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/navigation"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="start"
                    android:background="@color/white" />

                <View
                    android:id="@+id/dimmer_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="#E6F2F2F2"
                    android:fitsSystemWindows="true"
                    android:visibility="gone" />

                <com.getbase.floatingactionbutton.FloatingActionsMenu
                    android:id="@+id/addItemFAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/snackbar"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    fab:fab_addButtonColorNormal="@color/colorAccent"
                    fab:fab_addButtonColorPressed="@android:color/holo_red_dark"
                    fab:fab_addButtonPlusIconColor="@android:color/white"
                    fab:fab_labelStyle="@style/menu_labels_style">

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/show_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:backgroundTint="@android:color/white"
                        fab:fab_colorNormal="@android:color/white"
                        fab:fab_colorPressed="@android:color/white"
                        fab:fab_icon="@drawable/ic_apps_black_24dp"
                        fab:fab_size="mini"
                        fab:fab_title="Show Others" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_podcast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/podcast"
                        fab:fab_colorPressed="@color/podcast"
                        fab:fab_icon="@drawable/ic_podcast_icon"
                        fab:fab_size="mini"
                        fab:fab_title="Podcast" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_video_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/video_game"
                        fab:fab_colorPressed="@color/video_game"
                        fab:fab_icon="@drawable/ic_video_game_icon"
                        fab:fab_size="mini"
                        fab:fab_title="Video Game" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_phone_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/app"
                        fab:fab_colorPressed="@color/app"
                        fab:fab_icon="@drawable/ic_app_icon"
                        fab:fab_size="mini"
                        fab:fab_title="Phone App" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_album"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/album"
                        fab:fab_colorPressed="@color/album"
                        fab:fab_icon="@drawable/ic_headset_black_24dp"
                        fab:fab_size="mini"
                        fab:fab_title="Album" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/book"
                        fab:fab_colorPressed="@color/book"
                        fab:fab_icon="@drawable/ic_import_contacts_black_24dp"
                        fab:fab_size="mini"
                        fab:fab_title="Book" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_board_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/board_game"
                        fab:fab_colorPressed="@color/board_game"
                        fab:fab_icon="@drawable/ic_boardgame_icon"
                        fab:fab_size="mini"
                        fab:fab_title="Board Game" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/tv"
                        fab:fab_colorPressed="@color/tv"
                        fab:fab_icon="@drawable/ic_tv_icon"
                        fab:fab_size="mini"
                        fab:fab_title="TV Show" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_film"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/film"
                        fab:fab_colorPressed="@color/film"
                        fab:fab_icon="@drawable/ic_film"
                        fab:fab_size="mini"
                        fab:fab_title="Film" />

                </com.getbase.floatingactionbutton.FloatingActionsMenu>

                <android.support.design.widget.CoordinatorLayout
                    android:id="@+id/snackbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/navigation"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="56dp" />

            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nav_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ListView
            android:id="@+id/swrl_filter_list"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#FFF"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

