<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/active_swrls"
        android:title="@string/Swrl_List"
        android:icon="@drawable/ic_swrl_list_logo" />
     <item android:id="@+id/discover"
        android:title="@string/discover"
        android:icon="@drawable/ic_rocket" />
    <item android:id="@+id/done_swrls"
        android:title="@string/Done"
        android:icon="@drawable/ic_done_black_24dp" />
</menu>