<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.swrl.list.ui.activity.ListActivity">
    <item
        android:id="@+id/action_search"
        android:iconifiedByDefault="true"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_go_to_login"
        android:orderInCategory="100"
        android:title="@string/login_menu_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_all_details"
        android:orderInCategory="100"
        android:title="@string/refresh_all_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/actions_show_whats_new"
        android:orderInCategory="100"
        android:title="@string/show_whats_new"
        app:showAsAction="never" />
</menu>
